syntax = "proto3";
package tests.kitchensink;

option go_package = "tests_kitchensink";

import "validate/validate.proto";

message UInt32 {
    uint32 none = 1;

    uint32 lt  = 2 [(validate.rules).uint32.lt  = 5]; // x <  5
    uint32 lte = 3 [(validate.rules).uint32.lte = 5]; // x <= 5
    uint32 gt  = 4 [(validate.rules).uint32.gt  = 5]; // x >  5
    uint32 gte = 5 [(validate.rules).uint32.gte = 5]; // x >= 5

    uint32 lt_gt   = 6 [(validate.rules).uint32 = {gt:  10, lt:  15}]; // x >  gt && x <  lt
    uint32 lt_gte  = 7 [(validate.rules).uint32 = {gte: 10, lt:  15}]; // x >= gte && x <  lt
    uint32 lte_gt  = 8 [(validate.rules).uint32 = {gt:  10, lte: 15}]; // x >  gt && x <= lte
    uint32 lte_gte = 9 [(validate.rules).uint32 = {gte: 10, lte: 15}]; // x >= gte && x <= lte

    uint32 lt_gt_inv   = 10 [(validate.rules).uint32 = {lt:  20, gt:  25}]; // x <  lt || x >  gt
    uint32 lt_gte_inv  = 11 [(validate.rules).uint32 = {lt:  20, gte: 25}]; // x <  lt || x >= gte
    uint32 lte_gt_inv  = 12 [(validate.rules).uint32 = {lte: 20, gt:  25}]; // x <= lte || x >  gt
    uint32 lte_gte_inv = 13 [(validate.rules).uint32 = {lte: 20, gte: 25}]; // x <= lte || x >= gte

    uint32 in     = 14 [(validate.rules).uint32 = {in: [30, 35]}];
    uint32 not_in = 15 [(validate.rules).uint32 = {not_in: [40, 45]}];

    uint32 const = 16 [(validate.rules).uint32.const = 50];
}
